@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #24798: _msvccompiler.py doesn't properly support manifests
+
 - Issue #4395: Better testing and documentation of binary operators.
   Patch by Martin Panter.
 
